[gd_scene load_steps=13 format=3 uid="uid://63fkkbtdlema"]

[ext_resource type="Texture2D" uid="uid://du7fsdcx1ljr1" path="res://assets/heroes/guerriera DEF.png" id="1_7sja0"]
[ext_resource type="Script" path="res://game_logic/tutorial.gd" id="1_k3yv4"]
[ext_resource type="Texture2D" uid="uid://c1s0sxxrjxw0v" path="res://assets/heroes/maga DEF.png" id="2_nw56y"]
[ext_resource type="Texture2D" uid="uid://c0yr0uw61pg1n" path="res://assets/heroes/eroe ranger 1.png" id="3_4fnma"]
[ext_resource type="Theme" uid="uid://bionh2bhlri40" path="res://assets/theme/basic_theme.tres" id="3_ureg4"]
[ext_resource type="Texture2D" uid="uid://byx8dlamupa55" path="res://assets/heroes/inventore DEF.png" id="4_qdvuw"]
[ext_resource type="Texture2D" uid="uid://bnre3voy4rnnp" path="res://assets/tutorial/level.png" id="7_wlm5s"]
[ext_resource type="Texture2D" uid="uid://5k0tfayae743" path="res://assets/theme/Left.png" id="9_o5rqk"]
[ext_resource type="Texture2D" uid="uid://cbnogbts0wqhf" path="res://assets/theme/Play.png" id="10_4wuu3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4tflu"]
bg_color = Color(1, 0.419608, 0.419608, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f8twq"]
bg_color = Color(1, 0.901961, 0.427451, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qq27h"]
bg_color = Color(0.227451, 0.498039, 0.733333, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="Tutorial" type="ColorRect" node_paths=PackedStringArray("previous", "next", "close")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.941176)
script = ExtResource("1_k3yv4")
previous = NodePath("MarginContainer/PanelContainer/Previous")
next = NodePath("MarginContainer2/PanelContainer2/Next")
close = NodePath("MarginContainer3/PanelContainer3/Close")

[node name="PageControl" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Page1" type="Control" parent="PageControl"]
visible = false
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="PAGE1_TEXT1" type="RichTextLabel" parent="PageControl/Page1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -725.0
offset_top = -110.0
offset_right = 725.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_ureg4")
bbcode_enabled = true
text = "PAGE1_TEXT1"

[node name="Warrior" type="Sprite2D" parent="PageControl/Page1"]
position = Vector2(717, 218.6)
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_7sja0")

[node name="Label" type="Label" parent="PageControl/Page1/Warrior"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1248.0
offset_top = -444.0
offset_right = 409.0
offset_bottom = -303.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_ureg4")
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 140
text = "FIGHTER_CLASS_NAME"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Mage" type="Sprite2D" parent="PageControl/Page1"]
position = Vector2(683, 784)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_nw56y")

[node name="Label2" type="Label" parent="PageControl/Page1/Mage"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1248.0
offset_top = -479.0
offset_right = 409.0
offset_bottom = -338.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_ureg4")
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 140
text = "WIZARD_CLASS_NAME"
horizontal_alignment = 1

[node name="Ranger" type="Sprite2D" parent="PageControl/Page1"]
position = Vector2(1230, 230.6)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_4fnma")

[node name="Label3" type="Label" parent="PageControl/Page1/Ranger"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1248.0
offset_top = -494.0
offset_right = 409.0
offset_bottom = -353.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_ureg4")
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 140
text = "RANGER_CLASS_NAME"
horizontal_alignment = 1

[node name="Inventor" type="Sprite2D" parent="PageControl/Page1"]
position = Vector2(1218, 779)
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_qdvuw")

[node name="Label4" type="Label" parent="PageControl/Page1/Inventor"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1301.0
offset_top = -469.0
offset_right = 462.0
offset_bottom = -328.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_ureg4")
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 140
text = "INVENTOR_CLASS_NAME"
horizontal_alignment = 1

[node name="Page2" type="Control" parent="PageControl"]
visible = false
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="PAGE2_TEXT1" type="RichTextLabel" parent="PageControl/Page2"]
layout_mode = 0
offset_left = 1098.0
offset_top = 238.0
offset_right = 1568.0
offset_bottom = 893.0
text = "PAGE2_TEXT1"

[node name="HeroZone" type="Panel" parent="PageControl/Page2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Page3" type="Control" parent="PageControl"]
visible = false
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="PAGE3_TEXT1" type="RichTextLabel" parent="PageControl/Page3"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -425.0
offset_bottom = -380.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "PAGE3_TEXT1"

[node name="Sprite2D" type="Sprite2D" parent="PageControl/Page3"]
position = Vector2(913, 498)
scale = Vector2(0.6, 0.6)
texture = ExtResource("7_wlm5s")

[node name="PAGE3_TEXT2" type="RichTextLabel" parent="PageControl/Page3"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 414.0
offset_bottom = 477.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "PAGE3_TEXT2"

[node name="Page3_1" type="Control" parent="PageControl"]
visible = false
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Sprite2D" type="Sprite2D" parent="PageControl/Page3_1"]
position = Vector2(913, 498)
scale = Vector2(0.6, 0.6)
texture = ExtResource("7_wlm5s")

[node name="PAGE3_TEXT3" type="Label" parent="PageControl/Page3_1"]
layout_mode = 0
offset_left = 330.0
offset_top = 845.0
offset_right = 665.0
offset_bottom = 938.0
theme_type_variation = &"TutorialLabel"
text = "PAGE3_TEXT3"

[node name="PAGE3_TEXT1" type="RichTextLabel" parent="PageControl/Page3_1"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -425.0
offset_bottom = -380.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "PAGE3_TEXT1"

[node name="PAGE3_TEXT2" type="RichTextLabel" parent="PageControl/Page3_1"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 414.0
offset_bottom = 477.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "PAGE3_TEXT2"

[node name="ReferenceRect" type="ReferenceRect" parent="PageControl/Page3_1"]
layout_mode = 0
offset_left = 329.0
offset_top = 174.0
offset_right = 705.0
offset_bottom = 824.0
border_width = 8.0
editor_only = false

[node name="Page3_2" type="Control" parent="PageControl"]
visible = false
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Sprite2D" type="Sprite2D" parent="PageControl/Page3_2"]
position = Vector2(913, 498)
scale = Vector2(0.6, 0.6)
texture = ExtResource("7_wlm5s")

[node name="PAGE3_TEXT4" type="Label" parent="PageControl/Page3_2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -218.0
offset_top = 579.0
offset_right = 117.0
offset_bottom = 628.0
grow_horizontal = 2
theme_type_variation = &"TutorialLabel"
theme_override_constants/outline_size = 24
text = "PAGE3_TEXT4"
horizontal_alignment = 1

[node name="PAGE3_TEXT1" type="RichTextLabel" parent="PageControl/Page3_2"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -425.0
offset_bottom = -380.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "PAGE3_TEXT1"

[node name="PAGE3_TEXT2" type="RichTextLabel" parent="PageControl/Page3_2"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 414.0
offset_bottom = 477.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "PAGE3_TEXT2"

[node name="ReferenceRect" type="ReferenceRect" parent="PageControl/Page3_2"]
layout_mode = 0
offset_left = 760.0
offset_top = 341.0
offset_right = 1046.0
offset_bottom = 566.0
border_width = 8.0
editor_only = false

[node name="Page3_3" type="Control" parent="PageControl"]
visible = false
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Sprite2D" type="Sprite2D" parent="PageControl/Page3_3"]
position = Vector2(913, 498)
scale = Vector2(0.6, 0.6)
texture = ExtResource("7_wlm5s")

[node name="PAGE3_TEXT5" type="Label" parent="PageControl/Page3_3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -295.0
offset_top = 305.0
offset_right = 40.0
offset_bottom = 354.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"TutorialLabel"
text = "PAGE3_TEXT5"
horizontal_alignment = 1

[node name="PAGE3_TEXT1" type="RichTextLabel" parent="PageControl/Page3_3"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -425.0
offset_bottom = -380.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "PAGE3_TEXT1"

[node name="PAGE3_TEXT2" type="RichTextLabel" parent="PageControl/Page3_3"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 414.0
offset_bottom = 477.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "PAGE3_TEXT2"

[node name="ReferenceRect" type="ReferenceRect" parent="PageControl/Page3_3"]
layout_mode = 0
offset_left = 704.0
offset_top = 602.0
offset_right = 960.0
offset_bottom = 824.0
border_width = 8.0
editor_only = false

[node name="Page3_4" type="Control" parent="PageControl"]
visible = false
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Sprite2D" type="Sprite2D" parent="PageControl/Page3_4"]
position = Vector2(913, 498)
scale = Vector2(0.6, 0.6)
texture = ExtResource("7_wlm5s")

[node name="PAGE3_TEXT6" type="Label" parent="PageControl/Page3_4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -9.0
offset_top = 305.0
offset_right = 326.0
offset_bottom = 354.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"TutorialLabel"
text = "PAGE3_TEXT6"
horizontal_alignment = 1

[node name="PAGE3_TEXT1" type="RichTextLabel" parent="PageControl/Page3_4"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -425.0
offset_bottom = -380.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "PAGE3_TEXT1"

[node name="PAGE3_TEXT2" type="RichTextLabel" parent="PageControl/Page3_4"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 414.0
offset_bottom = 477.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "PAGE3_TEXT2"

[node name="ReferenceRect" type="ReferenceRect" parent="PageControl/Page3_4"]
layout_mode = 0
offset_left = 964.0
offset_top = 655.0
offset_right = 1219.0
offset_bottom = 824.0
border_width = 8.0
editor_only = false

[node name="Page3_5" type="Control" parent="PageControl"]
visible = false
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Sprite2D" type="Sprite2D" parent="PageControl/Page3_5"]
position = Vector2(913, 498)
scale = Vector2(0.6, 0.6)
texture = ExtResource("7_wlm5s")

[node name="PAGE3_TEXT7" type="RichTextLabel" parent="PageControl/Page3_5"]
layout_mode = 0
offset_left = 1303.0
offset_top = 223.0
offset_right = 1719.0
offset_bottom = 624.0
bbcode_enabled = true
text = "PAGE3_TEXT7"

[node name="PAGE3_TEXT1" type="RichTextLabel" parent="PageControl/Page3_5"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -425.0
offset_bottom = -380.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "PAGE3_TEXT1"

[node name="PAGE3_TEXT2" type="RichTextLabel" parent="PageControl/Page3_5"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 414.0
offset_bottom = 477.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "PAGE3_TEXT2"

[node name="ReferenceRect" type="ReferenceRect" parent="PageControl/Page3_5"]
layout_mode = 0
offset_left = 984.0
offset_top = 169.0
offset_right = 1252.0
offset_bottom = 509.0
border_width = 8.0
editor_only = false

[node name="MarginContainer" type="MarginContainer" parent="PageControl/Page3_5"]
layout_mode = 0
offset_right = 17.0
offset_bottom = 16.0

[node name="Page3_6" type="Control" parent="PageControl"]
visible = false
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Sprite2D" type="Sprite2D" parent="PageControl/Page3_6"]
position = Vector2(913, 498)
scale = Vector2(0.6, 0.6)
texture = ExtResource("7_wlm5s")

[node name="PAGE3_TEXT1" type="RichTextLabel" parent="PageControl/Page3_6"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -425.0
offset_bottom = -380.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "PAGE3_TEXT1"

[node name="PAGE3_TEXT2" type="RichTextLabel" parent="PageControl/Page3_6"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 414.0
offset_bottom = 477.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "PAGE3_TEXT2"

[node name="PAGE3_TEXT7" type="RichTextLabel" parent="PageControl/Page3_6"]
layout_mode = 0
offset_left = 1256.0
offset_top = 270.0
offset_right = 1735.0
offset_bottom = 633.0
bbcode_enabled = true
text = "PAGE3_TEXT8"

[node name="ReferenceRect" type="ReferenceRect" parent="PageControl/Page3_6"]
layout_mode = 0
offset_left = 1153.0
offset_top = 517.0
offset_right = 1449.0
offset_bottom = 663.0
border_width = 8.0
editor_only = false

[node name="Page3_7" type="Control" parent="PageControl"]
visible = false
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Sprite2D" type="Sprite2D" parent="PageControl/Page3_7"]
position = Vector2(913, 498)
scale = Vector2(0.6, 0.6)
texture = ExtResource("7_wlm5s")

[node name="PAGE3_TEXT1" type="RichTextLabel" parent="PageControl/Page3_7"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -425.0
offset_bottom = -380.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "PAGE3_TEXT1"

[node name="PAGE3_TEXT2" type="RichTextLabel" parent="PageControl/Page3_7"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 414.0
offset_bottom = 477.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "PAGE3_TEXT2"

[node name="ReferenceRect" type="ReferenceRect" parent="PageControl/Page3_7"]
layout_mode = 0
offset_left = 1181.0
offset_top = 686.0
offset_right = 1391.0
offset_bottom = 832.0
border_width = 8.0
editor_only = false

[node name="Label" type="Label" parent="PageControl/Page3_7"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -751.0
offset_top = -230.0
offset_right = -527.0
offset_bottom = -197.0
grow_horizontal = 0
grow_vertical = 0
theme_type_variation = &"TutorialLabel"
text = "PAGE4_TEXT3"
horizontal_alignment = 2

[node name="Label2" type="Label" parent="PageControl/Page3_7"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -751.0
offset_top = -190.0
offset_right = -527.0
offset_bottom = -157.0
grow_horizontal = 0
grow_vertical = 0
theme_type_variation = &"TutorialLabel"
text = "PAGE4_TEXT1"
horizontal_alignment = 2

[node name="Page5" type="Control" parent="PageControl"]
visible = false
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="PageControl/Page5"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -388.0
offset_top = -219.0
offset_right = 388.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="PAGE5_TEXT1" type="Label" parent="PageControl/Page5/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "PAGE5_TEXT1"

[node name="PAGE5_TEXT2" type="Label" parent="PageControl/Page5/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "PAGE5_TEXT2"

[node name="PAGE5_TEXT3" type="Label" parent="PageControl/Page5/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "PAGE5_TEXT3"

[node name="PAGE5_TEXT4" type="Label" parent="PageControl/Page5/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "PAGE5_TEXT4"

[node name="PAGE5_TEXT5" type="Label" parent="PageControl/Page5/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "PAGE5_TEXT5"

[node name="PAGE5_TEXT6" type="Label" parent="PageControl/Page5/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "PAGE5_TEXT6"

[node name="PAGE5_TEXT7" type="Label" parent="PageControl/Page5/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "PAGE5_TEXT7"

[node name="Important" type="Label" parent="PageControl/Page5"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -877.0
offset_top = -467.0
offset_right = 429.0
offset_bottom = -338.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_ureg4")
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 128
text = "THIS_IS_IMPORTANT"
horizontal_alignment = 1

[node name="Page6" type="Control" parent="PageControl"]
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="PageControl/Page6"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -520.0
offset_top = -200.0
offset_right = 520.0
offset_bottom = 201.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="PAGE6_TEXT1" type="RichTextLabel" parent="PageControl/Page6/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 48
text = "PAGE6_TEXT1"
fit_content = true
scroll_active = false

[node name="PAGE6_TEXT2" type="RichTextLabel" parent="PageControl/Page6/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 48
text = "PAGE6_TEXT2"
fit_content = true
scroll_active = false

[node name="PAGE6_TEXT3" type="RichTextLabel" parent="PageControl/Page6/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 48
text = "PAGE6_TEXT3"
fit_content = true
scroll_active = false

[node name="MarginContainer3" type="MarginContainer" parent="PageControl/Page6/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="PanelContainer3" type="PanelContainer" parent="PageControl/Page6/VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="Close" type="Button" parent="PageControl/Page6/VBoxContainer/MarginContainer3/PanelContainer3"]
custom_minimum_size = Vector2(300, 110)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_4tflu")
text = "END_TUTORIAL"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -8.0
offset_right = 16.0
offset_bottom = 8.0
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 540)
layout_mode = 2

[node name="Previous" type="Button" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_f8twq")
disabled = true
icon = ExtResource("9_o5rqk")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer2"]
custom_minimum_size = Vector2(0, 540)
layout_mode = 2

[node name="Next" type="Button" parent="MarginContainer2/PanelContainer2"]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_qq27h")
icon = ExtResource("10_4wuu3")

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -48.0
offset_bottom = 48.0
grow_horizontal = 0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="PanelContainer3" type="PanelContainer" parent="MarginContainer3"]
layout_mode = 2

[node name="Close" type="Button" parent="MarginContainer3/PanelContainer3"]
custom_minimum_size = Vector2(300, 110)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_4tflu")
text = "CLOSE"

[connection signal="button_down" from="PageControl/Page6/VBoxContainer/MarginContainer3/PanelContainer3/Close" to="." method="_on_close_button_down"]
[connection signal="button_down" from="MarginContainer/PanelContainer/Previous" to="." method="_on_previous_button_down"]
[connection signal="button_down" from="MarginContainer2/PanelContainer2/Next" to="." method="_on_next_button_down"]
[connection signal="button_down" from="MarginContainer3/PanelContainer3/Close" to="." method="_on_close_button_down"]
